--- a/settings.json
+++ b/settings.json
@@ -1,19 +1,19 @@
 {
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@zeeoneofc",
-	"yt":"bit.ly/ytzeeoneofc",
-	"grub": "bit.ly/gczeeoneofc",
-	"wa": "bit.ly/wazeeoneofc",
-	"donate": "bit.ly/dtzeeoneofc",
-	"ig": "bit.ly/igzeeoneofc",
-	"gt": "bit.ly/gtzeeoneofc",	
-	"ownername": "ZeeoneOfc",
-	"botname":"ΛᄂPΉΛ BӨƬ",
-	"img":"https://e.top4top.io/p_2010lz9211.jpg",
-	"thumb":"Alphabot.jpg",
-	"fakethumb":"Alphabot.jpg", 
-	"fake": " 「  Alphabot  」\nCreated By @zeeoneofc "
+	"ownerNumber": "6285158611300",
+	"ownerNumberr": "6285158611300",
+	"cr": "@KodratBotWa",
+	"yt":"Error",
+	"grub": "Error",
+	"wa": "Error",
+	"donate": "Error",
+	"ig": "Error",
+	"gt": "Error",	
+	"ownername": "Mr.C1TY3920",
+	"botname":"KodratBotWa",
+	"img":"https://b.top4top.io/p_2103g1l2s1.jpg",
+	"thumb":"kodrat1.jpg",
+	"fakethumb":"kodrat1.jpg", 
+	"fake": " 「  KodratBotWa  」\nCreated By @Mr.C1TY3920 "
 }
